--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,7 @@
             <li class="couleur2">bleu</li>
             <li class="couleur3">jaune</li>
         </ul>
+        <p> salut</p>
         
     </main>
     <footer></footer>
