--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Yvonne.Exercice</title>
     <link rel="icon" href="https://fontawesome.com/images/favicon/icon.svg" type="images ">
 </head>
@@ -22,4 +22,5 @@
     </main>
     <footer></footer>
 </body>
+<script src="2-greeting-user.js"></script>
 </html>
